fix header layout on smaller screen sizes

--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -11,6 +11,9 @@ body {
 
   & > header > section {
     width: 50%;
+    @media screen and (max-width: $m-screen-max) {
+      width: auto;
+    }
   }
 }
 
